Fazendo ajustes no pom , e atualizando versãão de java