@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.3.2</version>
+        <version>2.7.9</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 	<groupId>br.com.springboot</groupId>
@@ -14,7 +14,7 @@
 	<name>tabelafipe</name>
 	<description>Demo project for Spring Boot</description>
       <properties>
-        <java.version>21</java.version>
+        <java.version>19</java.version>
         <openapi.version>1.5.10</openapi.version>
         <spring-cloud.version>2022.0.1</spring-cloud.version>
       </properties>
@@ -118,9 +118,25 @@
           <version>2.1.0</version>
       </dependency>
       <dependency>
+          <groupId>com.baomidou</groupId>
+          <artifactId>mybatis-plus-boot-starter</artifactId>
+          <version>3.5.7</version>
+          <exclusions>
+              <exclusion>
+                  <groupId>org.mybatis</groupId>
+                  <artifactId>mybatis-spring</artifactId>
+              </exclusion>
+          </exclusions>
+      </dependency>
+      <dependency>
           <groupId>org.mybatis</groupId>
           <artifactId>mybatis-spring</artifactId>
           <version>3.0.3</version>
+      </dependency>
+      <dependency>
+          <groupId>org.projectlombok</groupId>
+          <artifactId>lombok</artifactId>
+          <scope>provided</scope>
       </dependency>
   </dependencies>
   <dependencyManagement>
@@ -162,9 +178,8 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
             <configuration>
-                <source>21</source>
-                <target>21</target>
-                <compilerArgs>--enable-preview</compilerArgs>
+                <source>19</source>
+                <target>19</target>
             </configuration>
         </plugin>
         <plugin>
